# Qt-csv-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Qt-csv-editor/: CMakeLists.txt  Qt-csv-editor_en_EN.ts  Qt-csv-editor_en_US.ts  Qt-csv-editor_ru_RU.ts  booldelegate.cpp  booldelegate.h  combodelegate.cpp  combodelegate.h  csvio.cpp  csvio.h  csvparser.cpp  csvparser.h  intdelegate.cpp  intdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mdichild.cpp  mdichild.h  mdichild.ui
build-Qt-csv-editor-Desktop_Qt_6_1_3_GCC_64bit-Debug/Qt-csv-editor_autogen/: mocs_compilation.cpp
